# Vaultstone

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md
docker/: Dockerfile.debian12-build
include/: archive_writer.h  backup_manager.h  backupper_config.h  backupper_plugin.h  vaultstone_config.h  vaultstone_plugin.h
scripts/: build-plugin-debian12.sh  setup-local-libcxx.sh
src/: archive_writer.cpp  backup_manager.cpp  backupper_config.cpp  backupper_plugin.cpp  vaultstone_config.cpp  vaultstone_plugin.cpp
